<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Material Checklist</string>
    <string name="settings">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_github">GitHub</string>
    <string name="menu_remove_checked_items">Remove checked items</string>
    <string name="menu_uncheck_checked_items">Uncheck checked items</string>
    <string name="menu_convert_to_text">Convert to text</string>
    <string name="menu_convert_to_checklist">Convert to checklist</string>
    <string name="menu_d_notes">Check my App D Notes</string>

    <plurals name="item_checked_removed">
        <item quantity="one">%d checked item removed</item>
        <item quantity="other">%d checked items removed</item>
    </plurals>
</resources>