<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_main_activity_convert_to_text"
        android:title="@string/menu_convert_to_text" />

    <item
        android:id="@+id/menu_main_activity_convert_to_checklist"
        android:title="@string/menu_convert_to_checklist" />

    <item
        android:id="@+id/menu_main_activity_remove_checked_items"
        android:title="@string/menu_remove_checked_items" />

    <item
        android:id="@+id/menu_main_activity_uncheck_checked_items"
        android:title="@string/menu_uncheck_checked_items" />

    <item
        android:id="@+id/menu_main_activity_d_notes"
        android:title="@string/menu_d_notes" />

    <item
        android:id="@+id/menu_main_activity_github"
        android:title="@string/menu_github" />

    <item
        android:id="@+id/menu_main_activity_settings"
        android:title="@string/menu_settings" />

</menu>